# FLAME_shuttle_tracking_backend

./: .gitignore  main.py  pyproject.toml
Backend/: .env.example  .gitignore  API_DOCUMENTATION.md  DATA_STORAGE.md  ENV_CONFIG.md  ETA_IMPLEMENTATION.md  ETA_QUICK_START.md  HYBRID_APPROACH.md  MYSQL_SETUP.md  OSRM.md  QUICK_START.md  README.md  eera_api.md  main.py  migrate_add_schedule_type.py  models.py  old_main.py  requirements.txt  shuttle_tracker.db-shm  shuttle_tracker.db-wal  test_dlt_vh.py  test_osrm.py
Backend/app/: check_db.py  main.py
Backend/app/api/admin/: controllers_admin.py  routes_admin.py
Backend/app/api/client/: controllers_client.py  controllers_eta.py  routes_client.py  routes_eta.py
Backend/app/core/: config.py  logger.py  route_config.py  route_config_sanjeev.txt  security.py
Backend/app/db/: crud.py  models.py  session.py
Backend/app/schemas/: eta.py  route.py  vehicle.py
Backend/app/services/: coordinate_projection_test.py  eta.py  eta_new.py  eta_working.py  gps.py  osrm.py  osrm_new.py  osrm_working.py  vehicle_sync.py
